--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,11 +12,14 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+      jdbc:
+        batch_size=50  # 한번에 DB업로드 할 수 있는 최대 개수 지정, 크면 메모리가 죽어버려.. 50으로 설정
     properties:
       hibernate:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+
 logging:
   level:
     root: INFO
