feat : 결제 기능 구현 및 GymTicket 도입

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1' // JSONObject용 의존성, 토스페이먼츠용
 }
 
 tasks.named('test') {
