--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,7 @@ logging:
     com.ll.townforest: DEBUG  #패키지명
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
+
+custom:
+  tossSecretKey:
+    key:
