refactor : 불필요 model 속성 제거, 권한 조회 로직 수정, view table 크기 조절

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,14 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+      - org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
   profiles:
     active: dev
     include: secret
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://127.0.0.1:3306/townforest__dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
@@ -13,7 +18,7 @@ spring:
     hibernate:
       ddl-auto: create
       jdbc:
-        batch_size=50  # 한번에 DB업로드 할 수 있는 최대 개수 지정, 크면 메모리가 죽어버려.. 50으로 설정
+        batch_size=50  # 한번에 DB업로드 할 수 있는 최대 개수 지정
     properties:
       hibernate:
         show_sql: true
