--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -34,6 +34,6 @@ spring:
 logging:
   level:
     root: INFO
-    com.ll.soloForest: INFO
+    com.ll.townforest: INFO
     org.hibernate.orm.jdbc.bind: INFO
     org.hibernate.orm.jdbc.extract: INFO
